# democracy-bot

./: .gitignore  LICENSE  README.md  app.py  lint.sh  pyproject.toml  run.sh
democracy_bot/: __main__.py  config.py  main.py  utils.py  voting.py
democracy_bot/commands/: text_channel.py  voting.py
