[tool.poetry]
name = "democracy-bot"
version = "0.1.0"
description = ""
authors = ["Valtteri Lakaniemi <valtteri.lakaniemi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
